- modifiche post refactoring cartelle. Ho ri-runnato tutti i test e passano. Spero non si sia rotto niente